[#20905] Editor Placeholder alignment issue in production

--- a/public/src/froala_editor/fd_themes.scss
+++ b/public/src/froala_editor/fd_themes.scss
@@ -2,6 +2,9 @@
 @import "../../fonts/glyphs-variables";
 @import "../../shared/mixins";
 
+/* To break the unicode character in production. have to fix this bug */
+i{}
+
 .solutions .editor-body {
   .fr-box {
     margin-top: 15px;
